# better-shot-x

./: .commitlintrc.json  .editorconfig  .env.example  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  skills-lock.json
.agents/skills/adding-tauri-splashscreen/: SKILL.md
.agents/skills/adding-tauri-system-tray/: SKILL.md
.agents/skills/building-tauri-with-github-actions/: SKILL.md
.agents/skills/calling-frontend-from-tauri-rust/: SKILL.md
.agents/skills/calling-rust-from-tauri-frontend/: SKILL.md
.agents/skills/configuring-tauri-apps/: SKILL.md
.agents/skills/configuring-tauri-capabilities/: SKILL.md
.agents/skills/configuring-tauri-csp/: SKILL.md
.agents/skills/configuring-tauri-http-headers/: SKILL.md
.agents/skills/configuring-tauri-permissions/: SKILL.md
.agents/skills/configuring-tauri-scopes/: SKILL.md
.agents/skills/customizing-tauri-windows/: SKILL.md
.agents/skills/debugging-tauri-apps/: SKILL.md
.agents/skills/developing-tauri-plugins/: SKILL.md
.agents/skills/distributing-tauri-for-android/: SKILL.md
.agents/skills/distributing-tauri-for-ios/: SKILL.md
.agents/skills/distributing-tauri-for-macos/: SKILL.md
.agents/skills/distributing-tauri-for-windows/: SKILL.md
.agents/skills/embedding-tauri-sidecars/: SKILL.md
.agents/skills/integrating-tauri-js-frontends/: SKILL.md
.agents/skills/integrating-tauri-rust-frontends/: SKILL.md
.agents/skills/listening-to-tauri-events/: SKILL.md
.agents/skills/managing-tauri-app-resources/: SKILL.md
.agents/skills/managing-tauri-plugin-permissions/: SKILL.md
.agents/skills/migrating-tauri-apps/: SKILL.md
.agents/skills/optimizing-tauri-binary-size/: SKILL.md
.agents/skills/packaging-tauri-for-linux/: SKILL.md
.agents/skills/running-nodejs-sidecar-in-tauri/: SKILL.md
.agents/skills/setting-up-tauri-projects/: SKILL.md
.agents/skills/signing-tauri-apps/: SKILL.md
.agents/skills/testing-tauri-apps/: SKILL.md
.agents/skills/understanding-tauri-architecture/: SKILL.md
.agents/skills/understanding-tauri-ecosystem-security/: SKILL.md
.agents/skills/understanding-tauri-ipc/: SKILL.md
.agents/skills/understanding-tauri-lifecycle-security/: SKILL.md
.agents/skills/understanding-tauri-process-model/: SKILL.md
.agents/skills/understanding-tauri-runtime-authority/: SKILL.md
.agents/skills/using-crabnebula-cloud-with-tauri/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
.husky/: commit-msg  pre-commit
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  package.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: capture.rs  clipboard.rs  health.rs  history.rs  mod.rs  settings.rs  shortcuts.rs
apps/desktop/src/components/: i18n-provider.tsx  theme-provider.tsx
apps/desktop/src/components/editor/: canvas.tsx  layers-panel.tsx  toolbar.tsx
apps/desktop/src/components/editor/__tests__/: editor.integration.test.tsx  toolbar.test.tsx
apps/desktop/src/components/ui/: switch.tsx  tabs.tsx  toaster.tsx
apps/desktop/src/hooks/: use-settings.ts
apps/desktop/src/lib/: alignment-snapping.ts  batch-processing.ts  magic-wand.ts  path-boolean.ts  utils.ts
apps/desktop/src/lib/__tests__/: alignment-snapping.test.ts
apps/desktop/src/locales/en/: common.json
apps/desktop/src/locales/vi/: common.json
apps/desktop/src/locales/zh-CN/: common.json
apps/desktop/src/routes/: capture.tsx  editor.tsx  history.tsx  settings.tsx
apps/desktop/src/stores/: settings.ts
apps/desktop/src/stores/editor/: adjustment-slice.ts  batch-slice.ts  canvas-slice.ts  crop-slice.ts  effects-slice.ts  filter-slice.ts  free-transform-slice.ts  image-slice.ts  index.ts  multi-select-slice.ts  path-operation-slice.ts  reset-slice.ts  resize-slice.ts  selection-slice.ts  template-slice.ts  text-slice.ts  types.ts  view-slice.ts
apps/desktop/src/stores/editor/__tests__/: editor-store.test.ts  template-slice.test.ts
apps/desktop/src/test/: i18n-provider.test.tsx  setup.ts
crates/capture/: Cargo.toml
crates/capture/src/: decode.rs  lib.rs
crates/capture/src/backends/: grim_slurp.rs  mod.rs  portal.rs  screenshots_rs.rs
crates/capture/src/window/: backends.rs  mod.rs
crates/clipboard/: Cargo.toml
crates/clipboard/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  paths.rs  types.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/recording/: Cargo.toml
crates/recording/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql  0002_history.sql
crates/storage/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
crates/tray/: Cargo.toml
crates/tray/src/: lib.rs
crates/uploads/: Cargo.toml
crates/uploads/src/: lib.rs
docs/architecture/: overview.md
docs/plugin-dev/: README.md
scripts/: generate-icons.mjs  install-deps.sh
