[package]
name = "better-shot-clipboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Clipboard engine — image, text, file path operations"

[dependencies]
better-shot-core = { path = "../core" }

serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { workspace = true }
