[package]
name = "better-shot-plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Plugin system — WASM runtime, SDK, capability sandbox"

[dependencies]
better-shot-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
wasmtime = { workspace = true }
wasi = { workspace = true }
