[package]
name = "better-shot-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Settings engine — TOML config with schema validation and migration"

[dependencies]
better-shot-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
