[package]
name = "better-shot-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Self-hosted sync engine — folder / WebDAV / E2E encryption"

[dependencies]
better-shot-core = { path = "../core" }
better-shot-storage = { path = "../storage" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
age = { workspace = true }
