[package]
name = "better-shot-uploads"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Upload engine — S3, R2, MinIO, SFTP, WebDAV providers"

[dependencies]
better-shot-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
keyring = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
