[package]
name = "better-shot-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

description = "Better Shot Linux desktop application (Tauri 2)"
default-run = "better-shot-desktop"

[lib]
name = "better_shot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
better-shot-core = { path = "../../../crates/core" }
better-shot-platform = { path = "../../../crates/platform" }
better-shot-capture = { path = "../../../crates/capture" }
better-shot-editor = { path = "../../../crates/editor" }
better-shot-ocr = { path = "../../../crates/ocr" }
better-shot-recording = { path = "../../../crates/recording" }
better-shot-clipboard = { path = "../../../crates/clipboard" }
better-shot-storage = { path = "../../../crates/storage" }
better-shot-uploads = { path = "../../../crates/uploads" }
better-shot-sync = { path = "../../../crates/sync" }
better-shot-plugins = { path = "../../../crates/plugins" }
better-shot-settings = { path = "../../../crates/settings" }
better-shot-tray = { path = "../../../crates/tray" }

tauri = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-specta = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
keyring = { workspace = true }
parking_lot = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
